# bezos-center-ix-hackaton

./: README.md
hack-be/: Dockerfile  Dockerfile.dev  README.md  db.sql  pyproject.toml  requirements.txt
hack-be/app/: main.py  models.py
hack-be/app/api/: deps.py  main.py  secure.py
hack-be/app/api/routes/: cavecad.py  history.py  images.py  login.py  stream_r.py  utils.py  (+1 more)
hack-be/app/core/: config.py  db.py  ldap.py  pagination.py  postgres.py  redis.py  security.py  ws.py
hack-be/app/services/: history.py  images.py  schema.py
hack-be/src/: analysis-agent.py  config.py  db.py  financy.py  flight-agent.py  insight_agent.py  main.py  pyproject.toml  stream-test.py  stream_test.py  suggestion-agent.py  weather.py
hackaton-agent-fe/: next.config.js  package.json  pnpm-lock.yaml
hackaton-agent-fe/app/: layout.tsx  page.tsx
hackaton-agent-fe/app/settings/: page.tsx
hackaton-agent-fe/app/supply-chain/: page.tsx
hackaton-agent-fe/components/: app-sidebar.tsx  hero.tsx  tanstack-provider.tsx
hackaton-agent-fe/components/dashboard/: ai-insights.tsx  dashboard-header.tsx  demand-overview.tsx  external-factors.tsx  production-metrics.tsx  supply-allocation.tsx  supply-chain-flow.tsx  user-guidance.tsx
hackaton-agent-fe/components/settings/: data-preferences.tsx  location-map.tsx
hackaton-agent-fe/components/ui/: background-gradient.tsx
hackaton-agent-fe/lib/ai/: decision-engine.ts  enhanced-decision-engine.ts
hackaton-agent-fe/lib/types/: supply-chain.ts
hackaton-agent-fe/scripts/: 001_create_supply_chain_tables.sql  002_add_settings_tables.sql
(+18 files in other folders)
